# ScribeAgent

./: .gitignore  .python-version  .repomixignore  README.md  pyproject.toml  pytest.ini
documentation/uv/: NotionLayers.md  uv_hello_world.py  uv_intro.md
sandbox/: notes.ipynb
sandbox/lab01/: blog_agent.py  blog_task.py
sandbox/lab01/drafts/: getting-started-objectbox-vectordb-swift-installation-guide.md
sandbox/lab01/resources/: recommendations.md
sandbox/lab02/: pyproject.toml
sandbox/lab02/src/allocation/: __init__.py
sandbox/lab02/src/allocation/adapters/: orm.py  repository.py
sandbox/lab02/src/allocation/domain/: __init__.py  model.py
sandbox/lab02/tests/: conftest.py
sandbox/lab02/tests/integration/: test_repository.py
sandbox/lab02/tests/unit/: test_batches.py  test_orderline.py
scripts/: flatten_directory.sh
src/examples/: notion_client.py
src/examples/data_scientist_agent/: Data scientist flow.json  csv_agent.py  plotly_visualizer.py  structured_output.py
src/scribeagent/: cli.py
src/scribeagent/application/services/: notion_services.py
src/scribeagent/domain/notion/: NotionTypes.py  entities.py  enums.py  repositories.py  value_objects.py
src/scribeagent/infrastructure/: factory.py
src/scribeagent/infrastructure/notion/: api_client.py  repositories.py
src/scribeagent/mcp/: server.py
src/scribeagent/utils/: NotionAPIUrlParser.py  __init__.py  notion_formatters.py
tests/: test_basic.py  test_cli.py  test_notion_api_client.py  test_notion_entities.py  test_notion_formatters.py  test_notion_infrastructure.py  test_notion_repositories.py  test_notion_services.py  test_notion_value_objects.py  test_utils.py
