[project]
name = "scribeagent"
version = "0.1.0"
description = "building a multi agent system for productivity tasks related to writing"
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
