[project]
name = "scribeagent"
version = "0.1.0"
description = "building a multi agent system for productivity tasks related to writing"
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scribeagent"
version = "0.1.0"


packages = [
    { include = "scribeagent", from = "src" }  # If your code is in src/scribeagent/
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
poethepoet = "^0.33.1"

[tool.poe.tasks.test]
shell = "pytest"

[tool.poe.tasks.notion-example]
cmd = "python -m src.examples.notion_client"
help = "Run the Notion client example"